--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -19,5 +19,5 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
-en:
-  listing_albums: "Listing albums!"
+es:
+  hello: "Hello world"
